--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
             </div>
             </div>
         </nav>
+
+        <!-- Banner -->
+
+        <div class="bg-[linear-gradient(90deg,#013122,#006747_50%,#013223_100%)] px-[60px] py-4">
+            <div class="flex justify-center">
+                <img class="h[92px] w-[92px]" src="./assets/logo.png" alt="">
+            </div>
+            <h3 class="text-[40px] font-bold text-white mt-3 text-center">জরুরি সেবা ডিরেক্টরি</h3>
+            <p class="font-bold text-[1.25rem] text-white text-center mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        </div>
     </header>
     <main>
 
