--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <!-- Tailwind CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+    <!-- font-awesome-CDN -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Font -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="inter mx-w-[100%]">
+<body class="inter mx-w-[100%] bg-[#41ff6b1a]">
     <header>
         <nav class="bg-white px-[60px] py-6">
             <div class="flex justify-between items-center">
@@ -58,8 +61,169 @@
             <p class="font-bold text-[1.25rem] text-white text-center mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>
     </header>
-    <main>
 
+
+    <main class="px-15">
+        <div class="flex">
+            <div class="grid grid-cols-3 gap-7 mt-12 w-3/4">
+
+            <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
+            <p class="mt-1">National Emergency</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+        </div>
+
+        <div class="1/4">
+            <h1>history</h1>
+        </div>
+        </div>
     </main>
 </body>
 </html>
