--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="flex items-center">
                 <div class="flex justify-center items-center mr-5 w-[123px] h-[52px] bg-[#41ff6b1a] rounded-full">
-                    <p class="font-extrabold mr-1.5">0</p>
+                    <p class="count font-extrabold mr-1.5">0</p>
                     <img class="h-[30px] w-[30px]" src="./assets/heart.png" alt="">
                 </div>
 
@@ -73,12 +73,67 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
             <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
             <p class="mt-1">National Emergency</p>
             <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <br>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#dfefff] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/police.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">পুলিশ</h3>
+            <p class="mt-1">Police</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">পুলিশ</p>
+            <br>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/fire-service.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">ফায়ার সার্ভিস</h3>
+            <p class="mt-1">Fire Service</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">ফায়ার</p>
+            <br>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+        </div>
+
+
+        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
+            <div class="flex justify-between items-center">
+                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
+                <img class="h-[32px] w-[32px]" src="./assets/ambulance.png" alt="">
+            </div>
+
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
+            </div>
+            <h3 class="text-[1.5rem] font-semibold mt-4">অ্যাম্বুলেন্স</h3>
+            <p class="mt-1">Ambulance</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">1994-999999</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">স্বাস্থ্য</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -90,12 +145,13 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <h3 class="text-[1.5rem] font-semibold mt-4">নারী ও শিশু সহায়তা</h3>
+            <p class="mt-1">Women & Child Helpline</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">109</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সহায়তা</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -107,12 +163,13 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <h3 class="text-[1.5rem] font-semibold mt-4">দুদক</h3>
+            <p class="mt-1">Anti-Corruption</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">106</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সরকারি</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -124,12 +181,13 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <h3 class="text-[1.5rem] font-semibold mt-4">বিদ্যুৎ বিভ্রাট</h3>
+            <p class="mt-1">Electricity Outage</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">16216</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">বিদ্যুৎ</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -141,12 +199,13 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <h3 class="text-[1.5rem] font-semibold mt-4">ব্র্যাক</h3>
+            <p class="mt-1">Brac</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">16445</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">এনজিও</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -158,63 +217,13 @@
                 <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
             </div>
 
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
+            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart love-icon"></i></div>
             </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
-            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
-        </div>
-
-
-        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
-            <div class="flex justify-between items-center">
-                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
-                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
-            </div>
-
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
-            </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
-            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
-        </div>
-
-
-        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
-            <div class="flex justify-between items-center">
-                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
-                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
-            </div>
-
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
-            </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
-            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
-        </div>
-
-
-        <div class="bg-white w-[437px] p-8 rounded-2xl shadow-lg">
-            <div class="flex justify-between items-center">
-                <div class="p-3.5 bg-[#ffe3e2] w-[60px] rounded-2xl">
-                <img class="h-[32px] w-[32px]" src="./assets/emergency.png" alt="">
-            </div>
-
-            <div class="h-[18px] w-[20px]"><i class="fa-solid fa-heart"></i></div>
-            </div>
-            <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
-            <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
-            <p class="py-1.5 px-4 bg-[#f2f2f2] w-[103px] rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
+            <h3 class="text-[1.5rem] font-semibold mt-4">বাংলাদেশ রেলওয়ে</h3>
+            <p class="mt-1">Bangladesh Railway</p>
+            <p class="mt-6 font-bold text-[32px] leading-9">163</p>
+            <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">পরিবহন</p>
+            <br>
             <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
             <button class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
@@ -225,5 +234,8 @@
         </div>
         </div>
     </main>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
