--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p class="mt-6 font-bold text-[32px] leading-9">999</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
             <br>
-            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular "></i> Copy</button>
+            <button class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 text-center hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
             <button id="phone-btn" class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
@@ -232,7 +232,7 @@
         </div>
         </div>
 
-        <div class="1/4 h-[120vh] w-[400px] bg-white p-6 rounded-2xl shadow-lg">
+        <div id="history" class="1/4 h-[120vh] w-[400px] bg-white p-6 rounded-2xl shadow-lg">
             <div class="flex justify-between items-center">
                 <div>
                 <h1 class="text-[1.25rem] font-bold"><i class="fa-solid fa-clock-rotate-left"></i> history</h1>
@@ -241,6 +241,9 @@
                 <button class="w-[127px] h-[52px] bg-[#00a63e] text-white rounded-full ">Clear</button>
             </div>
             </div>
+            
+            
+
         </div>
         </div>
     </main>
