--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body class="inter mx-w-[100%] bg-[#41ff6b1a]">
     <header>
-        <nav class="bg-white px-[60px] py-6">
-            <div class="flex justify-between items-center">
+        <nav class="bg-white px-4 md:px-[60px] py-4 md:py-6">
+            <div class="flex flex-col md:flex-row justify-between items-center gap-4">
                 <div class="flex items-center">
                     <div>
                         <img class="w-[50px] h-[50px]" src="./assets/logo.png" alt="">
@@ -66,9 +66,9 @@
     </header>
 
 
-    <main class="px-15">
-        <div class="flex md:flex-col lg:flex-row gap-7 mt-12">
-            <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-7 w-3/4">
+    <main class="inter max-w-[100%] bg-[#41ff6b1a] mt-8 md:px-10">
+        <div class="flex flex-col lg:flex-row gap-7">
+            <div class="grid grid-cols-1 gap-7 lg:grid-cols-3 lg:w-3/4">
 
             <div class="bg-white w-full p-6 lg:max-w-lg rounded-2xl shadow-lg">
             <div class="flex justify-between items-center">
@@ -80,11 +80,11 @@
             </div>
             <h3 class="text-[1.5rem] font-semibold mt-4">জাতীয় জরুরি সেবা</h3>
             <p class="mt-1">National Emergency</p>
-            <p class="mt-6 font-bold text-[32px] leading-9">999</p>
+            <p id="" class="hotline mt-6 font-bold text-[32px] leading-9">999</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সার্বজনীন</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 text-center hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="phone-btn" class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 text-center hover:bg-black hover:text-white transition duration-300"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="phone-btn" class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -101,8 +101,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">999</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">পুলিশ</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="p-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="p-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -119,8 +119,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">999</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">ফায়ার</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="h-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="h-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -137,8 +137,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">1994-999999</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">স্বাস্থ্য</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="o-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="o-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -155,8 +155,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">109</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সহায়তা</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="n-btn" class="  ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="n-btn" class="  ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -173,8 +173,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">106</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">সরকারি</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="e-btn" class="  ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="e-btn" class="  ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -191,8 +191,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">16216</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">বিদ্যুৎ</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="call-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="call-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -209,8 +209,8 @@
             <p class="mt-6 font-bold text-[32px] leading-9">16445</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">এনজিও</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="mobile-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="mobile-btn" class=" ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
 
 
@@ -227,12 +227,14 @@
             <p class="mt-6 font-bold text-[32px] leading-9">163</p>
             <p class="py-1.5 px-4 bg-[#f2f2f2] inline-block rounded-2xl text-[#5c5c5c]">পরিবহন</p>
             <br>
-            <button id="copy-btn" class="border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6"><i class="fa-regular fa-copy"></i> Copy</button>
-            <button id="telephone-btn" class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl"><i class="fa-solid fa-phone"></i> Call</button>
+            <button id="" class="copy-btn border-2 border-[#d4d6d5] h-[40px] w-[182px] rounded-xl mt-6 hover:bg-black hover:border-transparent transition duration-400 hover:text-white"><i class="fa-regular fa-copy"></i> Copy</button>
+            <button id="telephone-btn" class="ml-1 h-[40px] w-[182px] text-white bg-[#00a63e] rounded-xl hover:bg-[#027a2e] hover:border-transparent transition duration-400"><i class="fa-solid fa-phone"></i> Call</button>
         </div>
         </div>
 
-        <div class="1/4 h-[120vh] w-[400px] bg-white p-6 rounded-2xl shadow-lg">
+
+
+        <div class="w-full lg:w-1/4 h-auto bg-white p-6 rounded-2xl shadow-lg mt-7 lg:mt-0">
             <div class="flex justify-between items-center">
                 <div>
                 <h1 class="text-[1.25rem] font-bold"><i class="fa-solid fa-clock-rotate-left"></i> history</h1>
